--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 .body{
     padding: 0;
     margin: 0;
-    background-color: #000;
+    background-color: #fff;
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -25,8 +25,14 @@
     margin-right: 10px;
 }
 
-.text{
-    
+.form{
+    width: 90vw;
+    max-width: 900px;
+}
+
+input[type="checkbox"]:checked + .text {
+    text-decoration: line-through;
+    color: #999;
 }
 
 .items{
